--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 
 # Other files
  Lab003/Lab003_advanced/Lab003_advanced/0511105_Lab003.cpp.zip
+*.pbxproj
+*.xcworkspacedata
+*.plist
+*.xcuserstate
+*.xcbkptlist
