--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,21 @@
 
 # Other files
 Lab003/Lab003_advanced/Lab003_advanced/0511105_Lab003.cpp.zip
+Lab005/Lab005/.vs/Lab005/v15/.suo
+*.db
+*.ipch
+*.exe
+*.sln
+*.ilk
+*.pdb
+*.filters
+*.vcxproj
+*.idb
+*.obj
+*.tlog
+*.log
+*.h
+*.user
+*.pch
+Lab005/Lab005_VS/.vs/Lab005_VS/v15/.suo
+Lab005/Lab005_VS/Lab005_VS/pch.cpp
