--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.plist
 *.xcbkptlist
 
-# Other files
+# VS files
 .suo
 *.db
 *.ipch
@@ -26,5 +26,7 @@
 *.user
 *.pch
 pch.cpp
+
+#Zips
 Lab003/Lab003_advanced/Lab003_advanced/0511105_Lab003.cpp.zip
 Lab005/0511105_Lab5.zip
